--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <version>7.8.0</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
     </dependencies>
 
 	<build>
