--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+		<version>4.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>jakarta.annotation</groupId>
 			<artifactId>jakarta.annotation-api</artifactId>
 		</dependency>
