--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,14 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
     <description>Spring Boot Demo Project</description>
-
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
+    <!-- <properties>
+        <java.version>17</java.version>
+    </properties> -->
 
     <dependencies>
 
