--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version> <!-- use the latest available -->
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Web -->
         <dependency>
