--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,11 @@
 
     <dependencies>
 
-        <!-- Lombok (needed because tests use lombok.var) -->
+        <!-- Lombok (tests use lombok.var, so keep it available for tests) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.34</version>
-            <scope>provided</scope>
         </dependency>
 
         <!-- Web -->
@@ -115,7 +114,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Enable Lombok annotation processing (fixes lombok.var test compile) -->
+            <!-- Enable Lombok in main + test sources -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -124,6 +123,7 @@
                     <source>17</source>
                     <target>17</target>
 
+                    <!-- Main sources -->
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -131,6 +131,15 @@
                             <version>1.18.34</version>
                         </path>
                     </annotationProcessorPaths>
+
+                    <!-- TEST sources (IMPORTANT) -->
+                    <testAnnotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.34</version>
+                        </path>
+                    </testAnnotationProcessorPaths>
                 </configuration>
             </plugin>
 
