--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.34</version>
         </dependency>
-
+        <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>7.9.0</version>
+                <scope>test</scope>
+        </dependency>
         <!-- Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
